Fix DCHECK failure when PaintLayerContents() paints layer in throttled frame

Move the early return for throttled frame above the DCHECK about self-painting
layer status.

BUG=723014
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2893803002
Cr-Commit-Position: refs/heads/master@{#473095}

Former-commit-id: b0f1618f1c3f17a71ae3eb538bb326d329869309